# Computer_Graphics_II-IIi

./: CMakeLists.txt  Makefile  README.md  a.out  example.cpp
inc/: BLA.hpp  DDA.hpp  LineClipper.hpp  MCA.hpp  MEA.hpp  rectangle.hpp  vector2.hpp
linux/: Makefile
opengl/: Makefile  cube.c  triangle.c
src/: BLA.cpp  CMakeLists.txt  DDA.cpp  LineClipper.cpp  MCA.cpp  MEA.cpp  Makefile  main.cpp  rectangle.cpp  transform.cpp  vector2.cpp
